updated database and angular routing for component routing

--- a/public/css/base/_mainStyles.scss
+++ b/public/css/base/_mainStyles.scss
@@ -1,11 +1,17 @@
 // VARIABLES /////////////////
 $europa: "europa", sans-serif;
 $gray: #969696;
+$black: #010101;
 
 //////////////////////////////
 
 html {
     font-family: $europa;
+}
+
+a {
+    text-decoration: none;
+    color: $black;
 }
 
 .main-nav {
