--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -1,3 +1,26 @@
+.input-container {
+    position: relative;
+    width: 40%;
+    margin: 0 auto 50px;
+    input {
+        width: 100%;
+        height: 20px;
+        padding: 10px;
+        border-radius: 3px;
+        border: 1px solid gainsboro;
+        text-transform: uppercase;
+        font-weight: 100;
+    }
+    input:focus {
+        outline: none;
+    }
+    img {
+        width: 26px;
+        position: absolute;
+        right: 0px;
+        top: 8px;
+    }
+}
 
 .jackets-container {
     display: flex;
