--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -1,6 +1,6 @@
 .input-container {
     position: relative;
-    width: 40%;
+    width: 60%;
     margin: 0 auto 50px;
     input {
         width: 100%;
@@ -20,6 +20,17 @@
         right: 0px;
         top: 8px;
     }
+}
+
+.jackets select {
+    background: white;
+    border: 1px solid;
+    color: lightgray;
+    width: 60%;
+    display: block;
+    margin: 20px auto;
+    border-radius: 2px;
+    height: 20px;
 }
 
 .jackets-container {
