created header component

--- a/public/css/base/_mainStyles.scss
+++ b/public/css/base/_mainStyles.scss
@@ -14,13 +14,13 @@ a {
     color: $black;
 }
 
-.main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    margin-bottom: 100px;
-    .logo {
-        width: 45px;
-    }
-}
+// .main-nav {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     padding: 10px;
+//     margin-bottom: 100px;
+//     .logo {
+//         width: 45px;
+//     }
+// }
