--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,3 +2,4 @@
 @import "./base/mainStyles";
 @import "./components/jacketListPage";
 @import "./components/jackets";
+@import "./components/header";
