--- a/public/headerComponent/header.component.html
+++ b/public/headerComponent/header.component.html
@@ -1,6 +1,6 @@
 <nav class="main-nav">
     <i class="material-icons">menu</i>
     <div >
-        <a href="#!/jackets" class="link">Home</a>
+        <a href="#!/jackets" class="link"><i class="material-icons">change_history</i></a>
     </div>
 </nav>
