--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -3,7 +3,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
+    background: $olive;
     .logo {
         width: 45px;
     }
