--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -3,3 +3,5 @@
 @import "./components/jacketListPage";
 @import "./components/jackets";
 @import "./components/header";
+@import "./components/title";
+@import "./components/footer";
