worked on sidemenu for mobile

--- a/public/headerComponent/header.component.html
+++ b/public/headerComponent/header.component.html
@@ -1,5 +1,5 @@
 <nav class="main-nav">
-    <i class="material-icons">menu</i>
+    <i class="material-icons" ng-click="$ctrl.openMenu()">menu</i>
     <div >
         <a href="#!/jackets" class="link"><i class="material-icons">change_history</i></a>
     </div>
