added animations to mobile sidemenu

--- a/public/headerComponent/header.component.html
+++ b/public/headerComponent/header.component.html
@@ -4,3 +4,16 @@
         <a href="#!/jackets" class="link"><i class="material-icons">change_history</i></a>
     </div>
 </nav>
+
+
+<!-- SIDEMENU FOR MOBILE VIEW -->
+<section class="sidemenu-container" ng-class="{'sidemenu-active': $ctrl.isActive}" >
+    <i class="material-icons close-menu" ng-click="$ctrl.openMenu()">close</i>
+    <ul>
+        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Penfield</li></a>
+        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Patagonia</li></a>
+        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Fjallraven</li></a>
+        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Norrona</li></a>
+    </ul>
+
+</section>
