--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -9,3 +9,43 @@
         width: 45px;
     }
 }
+
+.sidemenu-container {
+    background: rgba(0,0,0,.92);
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    padding-top: 25vh;
+    color: white;
+    transform: translate3d(-100%,0,0);
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    a {
+        color: white;
+    }
+    li {
+        margin-bottom: 20px;
+        font-size: 2em;
+        font-weight: 100;
+        text-transform: uppercase;
+    }
+    .close-menu {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        font-size: 30px;
+    }
+}
+
+.sidemenu-container {
+    transition: all .5s ease;
+}
+.sidemenu-active {
+    transform: translate3d(0,0,0);
+}
