--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -25,6 +25,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        opacity: 0;
+        transform: translate3d(0,50px,0);
     }
     a {
         color: white;
@@ -41,11 +43,43 @@
         right: 15px;
         font-size: 30px;
     }
+    .sidemenu-logo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 90px;
+        opacity: 0;
+        transform: translate3d(0,0px,0);
+    }
 }
 
+//// ANIMATIONS FOR SIDEMENU ///////////
+
 .sidemenu-container {
-    transition: all .5s ease;
+    transition: all .3s ease;
 }
+
 .sidemenu-active {
+    transition: all .5s ease;
     transform: translate3d(0,0,0);
+}
+
+.sidemenu-container ul {
+    transition: all .3s ease;
+}
+
+.sidemenu-container ul.list-active {
+    transition: transform 1s ease, opacity 1s ease .25s;
+    opacity: 1;
+    transform: translate3d(0,0,0);
+}
+
+.sidemenu-container .sidemenu-logo {
+    transition: all .3s ease;
+}
+
+.sidemenu-container .sidemenu-logo-active {
+    transition: transform 1s ease, opacity 1s ease .25s;
+    opacity: 1;
+    transform: translate3d(0,35px,0);
 }
