--- a/public/headerComponent/header.component.html
+++ b/public/headerComponent/header.component.html
@@ -10,10 +10,10 @@
 <section class="sidemenu-container" ng-class="{'sidemenu-active': $ctrl.isActive}" >
     <i class="material-icons close-menu" ng-click="$ctrl.openMenu()">close</i>
     <ul ng-class="{'list-active': $ctrl.isActive}">
-        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Penfield</li></a>
-        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Patagonia</li></a>
-        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Fjallraven</li></a>
-        <a href="#!/jackets/penfield-bowerbridge-down-jacket"><li>Norrona</li></a>
+        <a href="#!/jackets/penfield-bowerbridge-down-jacket" ng-click="$ctrl.openMenu()"><li>Penfield</li></a>
+        <a href="#!/jackets/patagonia-wanaka-down-jacket" ng-click="$ctrl.openMenu()"><li>Patagonia</li></a>
+        <a href="#!/jackets/fjallraven-greenland-no.-1-down-jacket" ng-click="$ctrl.openMenu()"><li>Fjallraven</li></a>
+        <a href="#!/jackets/norr%C3%B8na-29-gore-tex-primaloft-insulated-parka" ng-click="$ctrl.openMenu()"><li>Norrona</li></a>
     </ul>
     <i class="material-icons sidemenu-logo" ng-class="{'sidemenu-logo-active': $ctrl.isActive}">change_history</i>
 
