--- a/public/jacketDetailComponent/jacketDetail.component.html
+++ b/public/jacketDetailComponent/jacketDetail.component.html
@@ -7,7 +7,7 @@
         <div class="right-container">
             <img ng-src="{{ $ctrl.jackets.logo }}"/>
             <p>{{ $ctrl.jackets.name }}</p>
-            <p>Sale {{ $ctrl.jackets.price }}</p>
+            <p class="sale">Sale {{ $ctrl.jackets.price }}</p>
             <select name="select" ng-model="$ctrl.chooseColor">
                 <option value="red" selected>Red</option>
                 <option value="Navy">Navy</option>
