--- a/public/css/base/_mainStyles.scss
+++ b/public/css/base/_mainStyles.scss
@@ -7,8 +7,13 @@ $olive: darkolivegreen;
 
 //////////////////////////////
 
+* {
+    box-sizing: border-box;   
+}
+
 html {
     font-family: $europa;
+    overflow-x: hidden;
 }
 
 a {
