--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -1,10 +1,16 @@
+jackets .sort-container {
+    width: 75%;
+    margin: 0 auto 30px;
+    padding-left: 10px;
+}
+
 .input-container {
     position: relative;
-    width: 60%;
+    width: 75%;
     margin: 0 auto 50px;
     input {
         width: 100%;
-        height: 20px;
+        height: 50px;
         padding: 10px;
         border-radius: 3px;
         border: 1px solid gainsboro;
@@ -15,10 +21,10 @@
         outline: none;
     }
     img {
-        width: 26px;
+        width: 25px;
         position: absolute;
-        right: 0px;
-        top: 8px;
+        right: 13px;
+        top: 13px;
     }
 }
 
