--- a/public/footerComponent/footer.component.html
+++ b/public/footerComponent/footer.component.html
@@ -5,5 +5,6 @@
     </div>
     <div class="footer-bottom">
         <p>Designed &amp; Built By: Elliot Richardson</p>
+        <p class="copy">Konsumer&copy;2017</p>
     </div>
 </footer>
