added thumbnail color option within product page

--- a/public/css/components/_jacketListPage.scss
+++ b/public/css/components/_jacketListPage.scss
@@ -30,6 +30,9 @@
         .sale {
             color: $brickred;
         }
+        .image-thumb {
+            max-width: 25%;
+        }
     }
     .product-img {
         img {
