--- a/public/css/components/_title.scss
+++ b/public/css/components/_title.scss
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 50px;
+    border-bottom: 1px solid lightgray;
+    padding-bottom: 50px;
+    width: 65%;
+    margin: 0 auto 50px;
     .main-logo {
         font-size: 3.75em;
     }
