--- a/public/jacketDetailComponent/jacketDetail.component.html
+++ b/public/jacketDetailComponent/jacketDetail.component.html
@@ -58,5 +58,7 @@
         </div>
     </div>
 
+    <!-- PRODUCT REVIEWS COMPONENT -->
     <product-reviews-component></product-reviews-component>
+
 </section>
