--- a/public/css/components/_productReviews.scss
+++ b/public/css/components/_productReviews.scss
@@ -18,12 +18,24 @@
         padding-left: 10px;
     }
 
-    select {
-        border: 1px solid lightgray;
-        border-radius: 3px;
-        height: 30px;
-        width: 70px;
+    .select-container {
+        display: flex;
         margin-bottom: 12px;
+        width: 130px;
+        border: 1px solid lightgray;
+        align-items: center;
+        border-radius: 3px;
+        height: 35px;
+        i {
+            color: lightgray;
+        }
+    }
+
+    select {
+        width: 100%;
+        height: 100%;
+        padding-left: 10px;
+        font-size: .9em;
     }
 
     input {
@@ -39,9 +51,9 @@
         text-transform: uppercase;
     }
 
-    button {
+    .submit-btn {
         height: 40px;
-        width: 150px;
+        width: 100%;
         text-transform: uppercase;
         background: black;
         border: none;
