added soloman jacket info for json file

--- a/public/css/base/_mainStyles.scss
+++ b/public/css/base/_mainStyles.scss
@@ -4,11 +4,12 @@ $gray: #969696;
 $black: #010101;
 $brickred: #990000;
 $olive: darkolivegreen;
+$white: #fff;
 
 //////////////////////////////
 
 * {
-    box-sizing: border-box;   
+    box-sizing: border-box;
 }
 
 html {
