--- a/public/css/components/_title.scss
+++ b/public/css/components/_title.scss
@@ -9,6 +9,9 @@
     .main-logo {
         font-size: 3.75em;
     }
+    i {
+        font-size: 65px;
+    }
     h1 {
         margin-bottom: 8px;
         font-size: 2.5em;
