--- a/public/headerComponent/header.component.html
+++ b/public/headerComponent/header.component.html
@@ -1,7 +1,7 @@
 <nav class="main-nav">
     <i class="material-icons" ng-click="$ctrl.openMenu()">menu</i>
     <div >
-        <a href="#!/jackets" class="link"><i class="material-icons">change_history</i></a>
+        <a href="#!/jackets" class="link">K</a>
     </div>
 </nav>
 
