added scroll to top directive button and functionality

--- a/public/footerComponent/footer.component.html
+++ b/public/footerComponent/footer.component.html
@@ -7,4 +7,5 @@
         <p>Designed &amp; Built By: Elliot Richardson</p>
         <p class="copy">Konsumer&copy;2017</p>
     </div>
+    <i class="material-icons up-arrow" to-the-top>keyboard_arrow_up</i>
 </footer>
