--- a/public/css/components/_footer.scss
+++ b/public/css/components/_footer.scss
@@ -7,6 +7,7 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    position: relative;
     .footer-top {
         display: flex;
         flex-direction: column;
@@ -32,5 +33,14 @@ footer {
     p {
         color: #969696;
         margin-bottom: 8px;
+    }
+
+    .up-arrow {
+        position: absolute;
+        bottom: 15px;
+        right: 15px;
+        padding: 5px;
+        border: 1px solid gray;
+        border-radius: 50%;
     }
 }
