added some animations and email component

--- a/public/css/components/_footer.scss
+++ b/public/css/components/_footer.scss
@@ -8,15 +8,19 @@ footer {
     align-items: center;
     justify-content: space-around;
     position: relative;
+    padding: 25px 0;
     .footer-top {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 20px;
     }
     .footer-bottom {
         display: flex;
         flex-direction: column;
         align-items: center;
+        // border-top: 1px solid;
+        padding-top: 10px;
         .copy {
             color: white;
         }
@@ -28,7 +32,7 @@ footer {
         color: $olive;
     }
     .footer-logo {
-        font-size: 30px;
+        font-size: 40px;
     }
     p {
         color: #969696;
@@ -42,5 +46,16 @@ footer {
         padding: 5px;
         border: 1px solid gray;
         border-radius: 50%;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
+
+
+@media(min-width: 1024px) {
+    footer {
+        min-height: 210px;
     }
 }
