--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -7,3 +7,5 @@
 @import "./components/footer";
 @import "./components/cart";
 @import "./components/productReviews";
+@import "./components/social";
+@import "./components/emailInput";
