--- a/public/footerComponent/footer.component.html
+++ b/public/footerComponent/footer.component.html
@@ -3,6 +3,13 @@
         <i class="material-icons footer-logo">change_history</i>
         <h1>Konsumer</h1>
     </div>
+
+    <!-- SOCIAL MEDIA COMPONENT -->
+    <social-component></social-component>
+
+    <!-- EMAIL INPUT COMPONENT -->
+    <email-input></email-input>
+
     <div class="footer-bottom">
         <p>Designed &amp; Built By: Elliot Richardson</p>
         <p class="copy">Konsumer&copy;2017</p>
