--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -2,14 +2,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 15px 10px;
     margin-bottom: 50px;
     background: $black;
     .logo {
         width: 45px;
     }
+    a {
+        font-size: 1.125em;
+    }
     a,i {
         color: $white;
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
 
@@ -21,7 +27,7 @@
     top: 0;
     left: 0;
     z-index: 10;
-    padding-top: 25vh;
+    padding-top: 23vh;
     color: white;
     transform: translate3d(-100%,0,0);
     ul {
@@ -36,7 +42,7 @@
     }
     li {
         margin-bottom: 20px;
-        font-size: 2em;
+        font-size: 1.5em;
         font-weight: 100;
         text-transform: uppercase;
     }
@@ -45,6 +51,9 @@
         top: 15px;
         right: 15px;
         font-size: 30px;
+        &:hover {
+            cursor: pointer;
+        }
     }
     .sidemenu-logo {
         display: flex;
