added drop menu on desktop view and css for reviews drop

--- a/public/headerComponent/header.component.html
+++ b/public/headerComponent/header.component.html
@@ -5,6 +5,26 @@
     </div>
 </nav>
 
+<nav class="main-nav-desktop">
+    <div>
+        <a href="#!/jackets" class="link">K</a>
+    </div>
+    <div class="nav-menu">
+        <li>Jackets</li>
+            <ul class="drop-container">
+                <a href="#!/jackets/saga-puff-polly-combo-jacket" ng-click="$ctrl.openMenu()"><li>Saga</li></a>
+                <a href="#!/jackets/penfield-bowerbridge-down-jacket" ng-click="$ctrl.openMenu()"><li>Penfield</li></a>
+                <a href="#!/jackets/patagonia-wanaka-down-jacket" ng-click="$ctrl.openMenu()"><li>Patagonia</li></a>
+                <a href="#!/jackets/quiksilver-impact-2L-gore-tex-jacket" ng-click="$ctrl.openMenu()"><li>QuickSilver</li></a>
+                <a href="#!/jackets/fjallraven-greenland-no.-1-down-jacket" ng-click="$ctrl.openMenu()"><li>Fjallraven</li></a>
+                <a href="#!/jackets/salomon-qst-snow-jacket" ng-click="$ctrl.openMenu()"><li>Salomon</li></a>
+                <a href="#!/jackets/norr%C3%B8na-29-gore-tex-primaloft-insulated-parka" ng-click="$ctrl.openMenu()"><li>Norrona</li></a>
+            </ul>
+        <li>About</li>
+        <li>Contact</li>
+    </div>
+</nav>
+
 
 <!-- SIDEMENU FOR MOBILE VIEW -->
 <section class="sidemenu-container" ng-class="{'sidemenu-active': $ctrl.isActive}" >
