--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -19,6 +19,33 @@
     }
 }
 
+.main-nav-desktop {
+    display: none;
+    padding: 15px 10px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+    list-style-type: none;
+    align-items: center;
+    .nav-menu {
+        display: flex;
+        position: relative;
+        .drop-container {
+            position: absolute;
+            top: 10px;
+        }
+    }
+    li {
+        margin: 0 13px;
+        font-weight: 100;
+        text-transform: uppercase;
+        font-size: .8em;
+    }
+    a {
+        font-size: 1.125em;
+        padding: 0 13px;
+    }
+}
+
 .sidemenu-container {
     background: rgba(0,0,0,.92);
     position: fixed;
@@ -94,4 +121,14 @@
     transition: transform 1s ease, opacity 1s ease .25s;
     opacity: 1;
     transform: translate3d(0,35px,0);
+}
+
+
+@media(min-width:992px) {
+    .main-nav {
+        display: none;
+    }
+    .main-nav-desktop {
+        display: flex;
+    }
 }
