--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -64,6 +64,7 @@ jackets .sort-container {
         }
     }
     .shop-items-container:hover {
+        transition: transform .2s ease;
         cursor: pointer;
         transform: scale(1.03);
         box-shadow: 0px 0px 10px $gray;
