--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -31,14 +31,25 @@
         position: relative;
         .drop-container {
             position: absolute;
-            top: 10px;
+            top: 24px;
+            box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+            border-radius: 3px;
+            display: none;
+            li:hover {
+                color: $olive;
+            }
         }
     }
     li {
+        display: flex;
+        align-items: center;
         margin: 0 13px;
         font-weight: 100;
         text-transform: uppercase;
         font-size: .8em;
+        &:hover {
+            cursor: pointer;
+        }
     }
     a {
         font-size: 1.125em;
