added closing functionality for nav menu on mouseleave and link click, added css as well

--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -26,6 +26,7 @@
     justify-content: space-between;
     list-style-type: none;
     align-items: center;
+    border-bottom: 1px solid lightgray;
     .nav-menu {
         display: flex;
         position: relative;
@@ -35,6 +36,8 @@
             box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
             border-radius: 3px;
             display: none;
+            z-index: 5;
+            background: $white;
             li:hover {
                 color: $olive;
             }
