compiled files into components folder and continued work on about page

--- a/public/components/mainNavDesktopComponent/mainNavDesktop.template.html
+++ b/public/components/mainNavDesktopComponent/mainNavDesktop.template.html
@@ -14,7 +14,7 @@
                 <a href="#!/jackets/salomon-qst-snow-jacket"><li>Salomon</li></a>
                 <a href="#!/jackets/norr%C3%B8na-29-gore-tex-primaloft-insulated-parka"><li>Norrona</li></a>
             </div>
-        <li>About</li>
-        <li>Contact</li>
+        <a href="#!/about"><li>About</li></a>
+        <a href="#!/contact"><li>Contact</li></a>
     </div>
 </nav>
