--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -9,3 +9,4 @@
 @import "./components/productReviews";
 @import "./components/social";
 @import "./components/emailInput";
+@import "./components/about";
