--- a/public/css/base/_mainStyles.scss
+++ b/public/css/base/_mainStyles.scss
@@ -21,3 +21,13 @@ a {
     text-decoration: none;
     color: $black;
 }
+
+p {
+    line-height: 1.5;
+}
+
+.wrapper {
+    width: 95%;
+    max-width: 1025px;
+    margin: 0 auto;
+}
