--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -27,9 +27,12 @@
     list-style-type: none;
     align-items: center;
     border-bottom: 1px solid lightgray;
+    background: $black;
+    color: $white;
     .nav-menu {
         display: flex;
         position: relative;
+        align-items: center;
         .drop-container {
             position: absolute;
             top: 24px;
@@ -38,6 +41,9 @@
             display: none;
             z-index: 5;
             background: $white;
+            a {
+                color: $black;
+            }
             li:hover {
                 color: $olive;
             }
@@ -55,8 +61,9 @@
         }
     }
     a {
-        font-size: 1.125em;
+        font-size: 1em;
         padding: 0 13px;
+        color: $white;
     }
 }
 
