--- a/public/components/aboutComponent/aboutComponent.template.html
+++ b/public/components/aboutComponent/aboutComponent.template.html
@@ -5,7 +5,8 @@
     <div class="wrapper">
         <h1>The vision of Konsumer</h1>
         <div class="line"></div>
-        <p>Birthed out of a passion for the outdoor sports lifestyle, it's our mission to get you into the best gear possible, while giving you the best online shopping experience. We truly do hope you have the best experience possible and if you need any inspiration along the way, please feel free to search our site for tips and tricks, as well as stories of the crew that works here.</p>
+        <p>Birthed out of a passion for the outdoor sports lifestyle, it's our mission to get you into the best gear possible, while giving you the best online shopping experience. We truly do hope you have the best experience possible and if you need any inspiration along the way, please feel free to search our site for tips and tricks, as well as stories of the crew that works here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
         <div class="line2"></div>
         <section class="icon-section">
             <div>
