--- a/public/css/components/_title.scss
+++ b/public/css/components/_title.scss
@@ -25,6 +25,15 @@
 }
 
 
+@media(min-width: 768px) {
+    h1 {
+        font-size: 2.75em;
+    }
+    i {
+        font-size: 70px;
+    }
+}
+
 @media(min-width: 992px) {
     .title-container {
         i {
